--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ button.gpt-main:hover {
 }
 @media (max-width: 800px) {
   .storybox {
-    padding: 1.2em 0.5em 1.3em 0.5em;
+    padding: 0.5em 0.5em 0.5em 0.5em;
     max-width: 99vw;
   }
   .gpt-section-title {
@@ -429,14 +429,30 @@ hr.twee-char-hr {
   color: #7b4b21;
 }
 @media (max-width: 800px) {
+  tw-story, tw-passage, #passages, .passage {
+    padding: 0 !important;
+    margin: 0 !important;
+    width: 100vw !important;
+    max-width: 100vw !important;
+    box-sizing: border-box !important;
+  }
   .qbox {
-    max-width: calc(100vw - 12px) !important;   /* 可調：左右各12px */
-    margin: 1em auto !important;
-    padding: 0.3em 0.3em !important;
-    border-radius: 16px !important;
+    width: 100vw !important;
+    max-width: 100vw !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    border-radius: 16px;
     box-shadow: 0 2px 12px 0 #dac7b380;
+    padding: 1.2em 16px !important;  /* 左右距離這裡自訂：16px或8px或20px均可 */
+    box-sizing: border-box;
+    background: #f8f5ec;
+    border: 2.5px solid #dac7b3;
   }
 }
+
+
+
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="1" tags="" position="450,100" size="100,100">&lt;div class=&quot;qbox&quot;&gt;
   &lt;div class=&quot;qbox-question&quot;&gt;
     1. 
