--- a/index.html
+++ b/index.html
@@ -429,31 +429,35 @@ hr.twee-char-hr {
   color: #7b4b21;
 }
 @media (max-width: 800px) {
-  html, body, tw-story, tw-passage, #passages, #passage, .passage {
+  html, body {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
     margin: 0 !important;
-    padding: 0 !important;
-    border: 0 !important;
     box-sizing: border-box !important;
     width: 100vw !important;
     max-width: 100vw !important;
-    overflow-x: hidden !important;  /* 防止橫向捲軸 */
-    position: static !important;
-    left: 0 !important;
-    right: 0 !important;
+    overflow-x: hidden !important;
+  }
+  tw-story, tw-passage, #passages, .passage {
+    padding: 0 !important;
+    margin: 0 !important;
+    width: 100vw !important;
+    max-width: 100vw !important;
+    box-sizing: border-box !important;
   }
   .qbox {
-    width: 100vw !important;
-    max-width: 100vw !important;
+    width: calc(100vw - 32px) !important;   /* 左右各16px */
+    max-width: calc(100vw - 32px) !important;
     margin: 0 auto !important;
-    padding: 1.2em 16px !important;  /* 左右邊距自訂 */
+    padding: 1.2em 1em !important;
     border-radius: 16px !important;
     box-shadow: 0 2px 12px 0 #dac7b380 !important;
-    box-sizing: border-box !important;
     background: #f8f5ec !important;
     border: 2.5px solid #dac7b3 !important;
-    position: relative !important;
-    left: 0 !important;
-    right: 0 !important;
+    box-sizing: border-box !important;
+    position: static !important;
+    left: auto !important;
+    right: auto !important;
   }
 }
 
