--- a/index.html
+++ b/index.html
@@ -429,37 +429,30 @@ hr.twee-char-hr {
   color: #7b4b21;
 }
 @media (max-width: 800px) {
-  html, body {
-    padding-left: 0 !important;
-    padding-right: 0 !important;
+  /* 清除所有外層的 padding 和 margin */
+  html, body, tw-story, tw-passage, #passages, .passage {
     margin: 0 !important;
+    padding: 0 !important;
     box-sizing: border-box !important;
-    width: 100vw !important;
     max-width: 100vw !important;
     overflow-x: hidden !important;
   }
-  tw-story, tw-passage, #passages, .passage {
-    padding: 0 !important;
-    margin: 0 !important;
-    width: 100vw !important;
-    max-width: 100vw !important;
-    box-sizing: border-box !important;
-  }
+
+  /* 這裡用「最大寬度」＋「自動外邊距」實現左右距離，完全不設100vw！ */
   .qbox {
-    width: calc(100vw - 32px) !important;   /* 左右各16px */
-    max-width: calc(100vw - 32px) !important;
-    margin: 0 auto !important;
-    padding: 1.2em 1em !important;
+    max-width: 97vw !important;           /* 內容區最多佔螢幕寬度的97%，你可以調成95vw或98vw */
+    width: 100%;                          /* 預設寬度為可用空間 */
+    margin-left: auto !important;
+    margin-right: auto !important;
+    padding: 1.2em 0.9em !important;      /* 框內文離米白邊線的距離，可以調整 */
     border-radius: 16px !important;
     box-shadow: 0 2px 12px 0 #dac7b380 !important;
     background: #f8f5ec !important;
     border: 2.5px solid #dac7b3 !important;
     box-sizing: border-box !important;
-    position: static !important;
-    left: auto !important;
-    right: auto !important;
   }
 }
+
 
 
 
