--- a/index.html
+++ b/index.html
@@ -250,19 +250,6 @@ button.gpt-main {
 button.gpt-main:hover {
   background: #7b4b21;
 }
-@media (max-width: 800px) {
-  .storybox {
-    padding: 0.5em 0.5em 0.5em 0.5em;
-    max-width: 99vw;
-  }
-  .gpt-section-title {
-    font-size: 1.09em;
-  }
-  .gpt-icon {
-    font-size: 1.17em;
-  }
-}
-
 
 .twee-character {
   background: #f8f5ec;
@@ -428,36 +415,32 @@ hr.twee-char-hr {
   font-weight: bold !important;
   color: #7b4b21;
 }
+
 @media (max-width: 800px) {
-  /* 清除所有外層的 padding 和 margin */
-  html, body, tw-story, tw-passage, #passages, .passage {
+  /* 歸零外層所有padding/margin，防止奇怪偏移 */
+  html, body, #story, #passages, .passage {
     margin: 0 !important;
     padding: 0 !important;
     box-sizing: border-box !important;
     max-width: 100vw !important;
+    min-width: 0 !important;
     overflow-x: hidden !important;
+    background: none !important;
   }
 
-  /* 這裡用「最大寬度」＋「自動外邊距」實現左右距離，完全不設100vw！ */
-  .qbox {
-    max-width: 97vw !important;           /* 內容區最多佔螢幕寬度的97%，你可以調成95vw或98vw */
-    width: 100%;                          /* 預設寬度為可用空間 */
-    margin-left: auto !important;
-    margin-right: auto !important;
-    padding: 1.2em 0.9em !important;      /* 框內文離米白邊線的距離，可以調整 */
-    border-radius: 16px !important;
-    box-shadow: 0 2px 12px 0 #dac7b380 !important;
-    background: #f8f5ec !important;
-    border: 2.5px solid #dac7b3 !important;
+  /* 你自己的內容框，左右貼邊距 3vw，且對稱 */
+  .qbox, .storybox, .twee-character, .titlebox, h1, h2 {
+    margin: 0 auto !important;
+    padding-left: 3vw !important;
+    padding-right: 3vw !important;
     box-sizing: border-box !important;
+    width: 100% !important;
+    max-width: 100vw !important;
+    min-width: 0 !important;
+    left: 0 !important;
+    right: 0 !important;
   }
 }
-
-
-
-
-
-
 </style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="1" tags="" position="450,100" size="100,100">&lt;div class=&quot;qbox&quot;&gt;
   &lt;div class=&quot;qbox-question&quot;&gt;
     1. 
