--- a/index.html
+++ b/index.html
@@ -418,10 +418,10 @@ hr.twee-char-hr {
 
 @media (max-width: 800px) {
   html, body, #story, #passages, .passage {
-    margin: 0 !important;
-    padding: 0 !important;
+    margin: 2vw !important;
+    padding: 2vw !important;
     max-width: 100vw !important;
-    min-width: 0 !important;
+    min-width: 2vw !important;
     box-sizing: border-box !important;
     overflow-x: hidden !important;
     background: none !important;
@@ -429,16 +429,16 @@ hr.twee-char-hr {
 
   /* 主要內容區塊統一左右 2vw 等距貼邊（如要全貼，改成 0）*/
   .qbox, .storybox, .twee-character, .titlebox, h1, h2 {
-    margin-left: 0 !important;
-    margin-right: 0 !important;
+    margin-left: 2vw !important;
+    margin-right: 2vw !important;
     padding-left: 2vw !important;
     padding-right: 2vw !important;
     box-sizing: border-box !important;
     width: 100% !important;
     max-width: 100vw !important;
-    min-width: 0 !important;
-    left: 0 !important;
-    right: 0 !important;
+    min-width: 2vw !important;
+    left: 2vw !important;
+    right: 2vw !important;
     float: none !important;
     clear: both !important;
   }
@@ -456,9 +456,9 @@ hr.twee-char-hr {
     max-width: 100% !important;
     height: auto !important;
     box-sizing: border-box !important;
-    margin-left: 0 !important;
-    margin-right: 0 !important;
-    padding: 0 !important;
+    margin-left: 2vw !important;
+    margin-right: 2vw !important;
+    padding: 2vw !important;
     display: block !important;
   }
 }
@@ -468,10 +468,10 @@ hr.twee-char-hr {
     大年三十中午，你忙了一整天：殺魚、備菜、擺盤，還特地在群組提醒哥哥和姐姐「五點前到家」。傍晚卻收到訊息：哥哥說臨時要加班、姐姐說塞車回不來。媽媽坐在餐桌邊，嘴角勉強上揚：「大家都長大了，難免各有安排。」她卻靜靜擦著桌子，眼神裡有點失落。你望著滿桌菜，氣氛有點尷尬又壓抑，你選擇:
   &lt;/div&gt;
   &lt;div class=&quot;qbox-options&quot;&gt;
-    &lt;span class=&quot;qbox-option&quot;&gt;&lt;&lt;link &quot;你陪笑說沒關係，轉身進廚房卻一直想：是不是自己不夠好，沒有提前問哥哥姊姊狀況？&quot;&gt;&gt;&lt;&lt;set $I += 1&gt;&gt;&lt;&lt;set $W += 1&gt;&gt;&lt;&lt;goto &quot;2&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
-    &lt;span class=&quot;qbox-option&quot;&gt;&lt;&lt;link &quot;你淡淡地對媽媽說：「反正每年都是這樣啦。」心裡還想：家裡真正願意陪媽媽的其實只有我。&quot;&gt;&gt;&lt;&lt;set $D += 1&gt;&gt;&lt;&lt;set $G += 1&gt;&gt;&lt;&lt;goto &quot;2&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
-    &lt;span class=&quot;qbox-option&quot;&gt;&lt;&lt;link &quot;你一邊收拾一邊抱怨：「他們每年都這樣放鳥！」語氣強硬、動作俐落，逞強把整桌菜重新加熱擺好。&quot;&gt;&gt;&lt;&lt;set $E += 1&gt;&gt;&lt;&lt;set $O += 1&gt;&gt;&lt;&lt;goto &quot;2&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
-    &lt;span class=&quot;qbox-option&quot;&gt;&lt;&lt;link &quot;你低頭默默把菜封保鮮膜放進冰箱，什麼話都沒說；回房換衣服時忽然覺得自己像個外人。&quot;&gt;&gt;&lt;&lt;set $L += 1&gt;&gt;&lt;&lt;set $A += 1&gt;&gt;&lt;&lt;goto &quot;2&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;qbox-option&quot;&gt;&lt;&lt;link &quot;你陪笑說沒關係，轉身進廚房卻一直想：是不是自己不夠好，沒有提前問哥哥姊姊狀況？&quot;&gt;&gt;&lt;&lt;set $I += 1&gt;&gt;&lt;&lt;set $W += 1&gt;&gt;&lt;&lt;goto &quot;30&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;qbox-option&quot;&gt;&lt;&lt;link &quot;你淡淡地對媽媽說：「反正每年都是這樣啦。」心裡還想：家裡真正願意陪媽媽的其實只有我。&quot;&gt;&gt;&lt;&lt;set $D += 1&gt;&gt;&lt;&lt;set $G += 1&gt;&gt;&lt;&lt;goto &quot;30&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;qbox-option&quot;&gt;&lt;&lt;link &quot;你一邊收拾一邊抱怨：「他們每年都這樣放鳥！」語氣強硬、動作俐落，逞強把整桌菜重新加熱擺好。&quot;&gt;&gt;&lt;&lt;set $E += 1&gt;&gt;&lt;&lt;set $O += 1&gt;&gt;&lt;&lt;goto &quot;30&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;qbox-option&quot;&gt;&lt;&lt;link &quot;你低頭默默把菜封保鮮膜放進冰箱，什麼話都沒說；回房換衣服時忽然覺得自己像個外人。&quot;&gt;&gt;&lt;&lt;set $L += 1&gt;&gt;&lt;&lt;set $A += 1&gt;&gt;&lt;&lt;goto &quot;30&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
   &lt;/div&gt;
 &lt;/div&gt;
 </tw-passagedata><tw-passagedata pid="2" name="10" tags="" position="1575,100" size="100,100">&lt;div class=&quot;qbox&quot;&gt;
@@ -1977,7 +1977,7 @@ G = &lt;&lt;=$G&gt;&gt;, L = &lt;&lt;=$L&gt;&gt;
     Kaufman, S. B., et al. (2019). The Light vs. Dark Triad of Personality. &lt;i&gt;Frontiers in Psychology&lt;/i&gt;.
   &lt;/div&gt;
 &lt;/div&gt;
-&lt;div class=&quot;qbox&quot; style=&quot;border:1px solid red;&quot;&gt;123&lt;/div&gt;
+
 &lt;&lt;set $I = 0&gt;&gt;
 &lt;&lt;set $E = 0&gt;&gt;
 &lt;&lt;set $A = 0&gt;&gt;
