--- a/index.html
+++ b/index.html
@@ -418,47 +418,37 @@ hr.twee-char-hr {
 
 @media (max-width: 800px) {
   html, body, #story, #passages, .passage {
-    margin: 5vw !important;
-    padding: 5vw !important;
+    margin: 0 !important;
+    padding: 0 !important;
     max-width: 100vw !important;
-    min-width: 5vw !important;
+    min-width: 0 !important;
     box-sizing: border-box !important;
     overflow-x: hidden !important;
     background: none !important;
   }
 
-  /* 主要內容區塊統一左右 2vw 等距貼邊（如要全貼，改成 0）*/
+  /* 只需要這一個！ */
   .qbox, .storybox, .twee-character, .titlebox, h1, h2 {
-    margin-left: 5vw !important;
-    margin-right: 5vw !important;
-    padding-left: 5vw !important;
+    margin: 0 auto !important;
+    padding-left: 5vw !important;   /* 左右控制這裡 */
     padding-right: 5vw !important;
     box-sizing: border-box !important;
     width: 100% !important;
     max-width: 100vw !important;
-    min-width: 5vw !important;
-    left: 5vw !important;
-    right: 5vw !important;
+    min-width: 0 !important;
     float: none !important;
     clear: both !important;
   }
 
-  /* 內容區塊不讓左右距離失衡，內容始終對中 */
-  .qbox, .storybox, .twee-character {
-    margin-top: 5vw !important;
-    margin-bottom: 5vw !important;
-  }
-
-  /* 強制所有內容圖片/表格/iframe 也不要超出寬度 */
+  /* 圖片/表格/iframe等內容不超出 */
   .qbox img, .storybox img, .twee-character img,
   .qbox table, .storybox table, .twee-character table,
   .qbox iframe, .storybox iframe, .twee-character iframe {
     max-width: 100% !important;
     height: auto !important;
     box-sizing: border-box !important;
-    margin-left: 5vw !important;
-    margin-right: 5vw !important;
-    padding: 5vw !important;
+    margin: 0 auto !important;
+    padding: 0 !important;
     display: block !important;
   }
 }
