--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@ G = &lt;&lt;=$G&gt;&gt;, L = &lt;&lt;=$L&gt;&gt;
 
 &lt;script&gt;
 (function() {
-  var url = &quot;https://script.google.com/macros/s/AKfycbzbxznDV18Jqp07bHI66khoDU_aAfBp30zF_j-KE2QfFyVwDwrTDxeajBODZapy7d-d/exec&quot;;
+  var url = &quot;https://formspree.io/f/xzzvpwdk&quot;;
   var data = {
     name: State.variables.name || &quot;&quot;,
     code: State.variables.code || &quot;&quot;,
