--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@ window.Engine = SugarCube.Engine;</script><tw-passagedata pid="1" name="1" tags=
     1. 大年三十中午，你忙了一整天：殺魚、備菜、擺盤，還特地在群組提醒哥哥和姐姐「五點前到家」。傍晚卻收到訊息：哥哥說臨時要加班、姐姐說塞車回不來。媽媽坐在餐桌邊，嘴角勉強上揚：「大家都長大了，難免各有安排。」她卻靜靜擦著桌子，眼神裡有點失落。你望著滿桌菜，氣氛有點尷尬又壓抑，你選擇:
   &lt;/div&gt;
   &lt;div class=&quot;qbox-options&quot;&gt;
-    &lt;span class=&quot;qbox-option&quot;&gt;&lt;&lt;link &quot;你陪笑說沒關係，轉身進廚房卻一直想：是不是自己不夠好，沒有提前問哥哥姊姊狀況？&quot;&gt;&gt;&lt;&lt;set $I += 1&gt;&gt;&lt;&lt;set $W += 1&gt;&gt;&lt;&lt;goto &quot;30&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;qbox-option&quot;&gt;&lt;&lt;link &quot;你陪笑說沒關係，轉身進廚房卻一直想：是不是自己不夠好，沒有提前問哥哥姊姊狀況？&quot;&gt;&gt;&lt;&lt;set $I += 1&gt;&gt;&lt;&lt;set $W += 1&gt;&gt;&lt;&lt;goto &quot;2&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
     &lt;span class=&quot;qbox-option&quot;&gt;&lt;&lt;link &quot;你淡淡地對媽媽說：「反正每年都是這樣啦。」心裡還想：家裡真正願意陪媽媽的其實只有我。&quot;&gt;&gt;&lt;&lt;set $D += 1&gt;&gt;&lt;&lt;set $G += 1&gt;&gt;&lt;&lt;goto &quot;2&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
     &lt;span class=&quot;qbox-option&quot;&gt;&lt;&lt;link &quot;你一邊收拾一邊抱怨：「他們每年都這樣放鳥！」語氣強硬、動作俐落，逞強把整桌菜重新加熱擺好。&quot;&gt;&gt;&lt;&lt;set $E += 1&gt;&gt;&lt;&lt;set $O += 1&gt;&gt;&lt;&lt;goto &quot;2&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
     &lt;span class=&quot;qbox-option&quot;&gt;&lt;&lt;link &quot;你低頭默默把菜封保鮮膜放進冰箱，什麼話都沒說；回房換衣服時忽然覺得自己像個外人。&quot;&gt;&gt;&lt;&lt;set $L += 1&gt;&gt;&lt;&lt;set $A += 1&gt;&gt;&lt;&lt;goto &quot;2&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
@@ -1120,9 +1120,10 @@ window.Engine = SugarCube.Engine;</script><tw-passagedata pid="1" name="1" tags=
   &lt;div class=&quot;twee-char-mainrow&quot;&gt;
     &lt;img src=&quot;https://i.postimg.cc/446jm2T9/E-A-W-L.png&quot; class=&quot;twee-char-portrait&quot; alt=&quot;角色形象圖&quot;&gt;
     &lt;div class=&quot;twee-char-quotes&quot;&gt;
-      &lt;span&gt;「沒人愛我，我自己都懶得愛自己。」&lt;/span&gt;
-      &lt;span&gt;「自責到自閉。」&lt;/span&gt;
-      &lt;span&gt;「都是我的錯，大家快點忘了我吧。」&lt;/span&gt;
+      &lt;span&gt;「大家都好棒，我很廢，但沒差啦。」&lt;/span&gt;
+      &lt;span&gt;「世界很大，我很小，小到剛好被遺忘。」&lt;/span&gt;
+      &lt;span&gt;「I&#39;m just another face in the crowd.《Joker》」&lt;/span&gt;
+      &lt;span&gt;「私なんて、誰も気にしない。」《螢火之森へ》&lt;/span&gt;
     &lt;/div&gt;
   &lt;/div&gt;
 
@@ -1187,9 +1188,10 @@ window.Engine = SugarCube.Engine;</script><tw-passagedata pid="1" name="1" tags=
   &lt;div class=&quot;twee-char-mainrow&quot;&gt;
     &lt;img src=&quot;https://i.postimg.cc/fb1106Lx/E-D-O-G.png&quot; class=&quot;twee-char-portrait&quot; alt=&quot;角色形象圖&quot;&gt;
     &lt;div class=&quot;twee-char-quotes&quot;&gt;
-      &lt;span&gt;「硬是我的風格。」&lt;/span&gt;
-      &lt;span&gt;「不講道理，只講結果。」&lt;/span&gt;
-      &lt;span&gt;「你可以選擇接受，不能選擇反抗。」&lt;/span&gt;
+      &lt;span&gt;「規則，是給別人設的，不是給自己守的。」&lt;/span&gt;
+      &lt;span&gt;「講道理是留給弱者的，強者只講結果。」&lt;/span&gt;
+      &lt;span&gt;「Power is power.」&lt;/span&gt;
+      &lt;span&gt;「弱い者が傷つくのは自業自得よ。」&lt;/span&gt;
     &lt;/div&gt;
   &lt;/div&gt;
 
@@ -1253,9 +1255,10 @@ window.Engine = SugarCube.Engine;</script><tw-passagedata pid="1" name="1" tags=
   &lt;div class=&quot;twee-char-mainrow&quot;&gt;
     &lt;img src=&quot;https://i.postimg.cc/2yDJ0hny/E-D-O-L.png&quot; class=&quot;twee-char-portrait&quot; alt=&quot;角色形象圖&quot;&gt;
     &lt;div class=&quot;twee-char-quotes&quot;&gt;
-      &lt;span&gt;「冷酷是我的溫柔。」&lt;/span&gt;
-      &lt;span&gt;「我沒在裝狠，我天生就這樣。」&lt;/span&gt;
-      &lt;span&gt;「強勢起來連自己都怕。」&lt;/span&gt;
+      &lt;span&gt;「我習慣了被冷落，所以看起來很冷淡。」&lt;/span&gt;
+      &lt;span&gt;「我沒那麼多故事，只是不擅長快樂。」&lt;/span&gt;
+      &lt;span&gt;「I could have been a contender. I could&#39;ve been somebody.」&lt;/span&gt;
+      &lt;span&gt;「がんばっても、どうせ誰も見てない。」&lt;/span&gt;
     &lt;/div&gt;
   &lt;/div&gt;
 
@@ -1319,8 +1322,9 @@ window.Engine = SugarCube.Engine;</script><tw-passagedata pid="1" name="1" tags=
     &lt;img src=&quot;https://i.postimg.cc/k48zNf6L/E-D-W-G.png&quot; class=&quot;twee-char-portrait&quot; alt=&quot;角色形象圖&quot;&gt;
     &lt;div class=&quot;twee-char-quotes&quot;&gt;
       &lt;span&gt;「只要我不尷尬，尷尬的就是別人。」&lt;/span&gt;
-      &lt;span&gt;「你說啥都行，反正我不在乎。」&lt;/span&gt;
-      &lt;span&gt;「無所謂是我的人生信條。」&lt;/span&gt;
+      &lt;span&gt;「這種場面我見多了，早就練出免疫力了。」&lt;/span&gt;
+      &lt;span&gt;「I’m the life of the party, but no one knows the real me.」&lt;/span&gt;
+       &lt;span&gt;「俺は何者にでもなれる。だが、誰にもなりたくはない。」&lt;/span&gt;
     &lt;/div&gt;
   &lt;/div&gt;
 
@@ -1384,9 +1388,10 @@ window.Engine = SugarCube.Engine;</script><tw-passagedata pid="1" name="1" tags=
   &lt;div class=&quot;twee-char-mainrow&quot;&gt;
     &lt;img src=&quot;https://i.postimg.cc/mkynJkSw/E-D-W-L.png&quot; class=&quot;twee-char-portrait&quot; alt=&quot;角色形象圖&quot;&gt;
     &lt;div class=&quot;twee-char-quotes&quot;&gt;
-      &lt;span&gt;「沒有人在意我，那我就不在意大家。」&lt;/span&gt;
-      &lt;span&gt;「想放棄又捨不得躺平。」&lt;/span&gt;
-      &lt;span&gt;「別人都很棒，我很廢，但沒差啦。」&lt;/span&gt;
+      &lt;span&gt;「大家都覺得我很好，其實我一點都不覺得。」&lt;/span&gt;
+      &lt;span&gt;「我的熱情像日光燈——亮歸亮，不暖人。」&lt;/span&gt;
+      &lt;span&gt;「I&#39;m the life of the party, but dead inside.」&lt;/span&gt;
+      &lt;span&gt;「みんなと笑ってるのに、なんで私は泣きたくなるんだろう。&lt;/span&gt;
     &lt;/div&gt;
   &lt;/div&gt;
 
@@ -1453,7 +1458,7 @@ window.Engine = SugarCube.Engine;</script><tw-passagedata pid="1" name="1" tags=
       &lt;span&gt;「我不喜歡你不是我的錯，是你太無趣了。」&lt;/span&gt;
       &lt;span&gt;「對不起你誤會了，我就是故意的。」&lt;/span&gt;
       &lt;span&gt;「I don’t have an attitude problem, you have a perception problem.&lt;/span&gt;
-      &lt;span&gt;「王の力はお前を孤独にする。」
+      &lt;span&gt;「勝利以外は全て敗北だ。《JOJO》」
       &lt;/span&gt;
     &lt;/div&gt;
   &lt;/div&gt;
@@ -1719,9 +1724,10 @@ window.Engine = SugarCube.Engine;</script><tw-passagedata pid="1" name="1" tags=
   &lt;div class=&quot;twee-char-mainrow&quot;&gt;
     &lt;img src=&quot;https://i.postimg.cc/R0JD9XRq/I-D-O-G.png&quot; class=&quot;twee-char-portrait&quot; alt=&quot;角色形象圖&quot;&gt;
     &lt;div class=&quot;twee-char-quotes&quot;&gt;
-      &lt;span&gt;「高冷才是我的保護色。」&lt;/span&gt;
-      &lt;span&gt;「我不是不說話，是懶得理你。」&lt;/span&gt;
-      &lt;span&gt;「你行你上啊。」&lt;/span&gt;
+      &lt;span&gt;「對不起，我不合群，因為群太弱。」&lt;/span&gt;
+      &lt;span&gt;「我不是沒情緒，是沒必要。」&lt;/span&gt;
+      &lt;span&gt;「Sometimes I talk to myself for expert advice.」&lt;/span&gt;
+      &lt;span&gt;「王の力はお前を孤独にする。《Code Geass 》」&lt;/span&gt;
     &lt;/div&gt;
   &lt;/div&gt;
 
@@ -1786,9 +1792,10 @@ window.Engine = SugarCube.Engine;</script><tw-passagedata pid="1" name="1" tags=
   &lt;div class=&quot;twee-char-mainrow&quot;&gt;
     &lt;img src=&quot;https://i.postimg.cc/tT0mgWSk/I-D-O-L.png&quot; class=&quot;twee-char-portrait&quot; alt=&quot;角色形象圖&quot;&gt;
     &lt;div class=&quot;twee-char-quotes&quot;&gt;
-      &lt;span&gt;「冷漠但自卑。」&lt;/span&gt;
-      &lt;span&gt;「越逞強，越覺得自己沒用。」&lt;/span&gt;
-      &lt;span&gt;「想裝強但裝不來。」&lt;/span&gt;
+      &lt;span&gt;「比起孤獨，我更怕在熱鬧裡覺得自己多餘。」&lt;/span&gt;
+      &lt;span&gt;「我不是不想努力，是努力了也沒用。」&lt;/span&gt;
+      &lt;span&gt;「I’m nobody.《Nobody》」&lt;/span&gt;
+      &lt;span&gt;「生きるってなんだろう。死ぬことかな。《人間失格》」&lt;/span&gt;
     &lt;/div&gt;
   &lt;/div&gt;
 
@@ -1851,9 +1858,10 @@ window.Engine = SugarCube.Engine;</script><tw-passagedata pid="1" name="1" tags=
   &lt;div class=&quot;twee-char-mainrow&quot;&gt;
     &lt;img src=&quot;https://i.postimg.cc/nrpR4ZtQ/I-D-W-G.png&quot; class=&quot;twee-char-portrait&quot; alt=&quot;角色形象圖&quot;&gt;
     &lt;div class=&quot;twee-char-quotes&quot;&gt;
-      &lt;span&gt;「你問我在想什麼？我也不知道。」&lt;/span&gt;
-      &lt;span&gt;「裝死是保命的最好方式。」&lt;/span&gt;
-      &lt;span&gt;「什麼都不做，最安全。」&lt;/span&gt;
+      &lt;span&gt;「我不是難相處，我只是不想和普通人浪費時間。」&lt;/span&gt;
+      &lt;span&gt;「所謂孤獨，就是身邊都是配角。」&lt;/span&gt;
+      &lt;span&gt;「Frankly, my dear, I don&#39;t give a damn.」&lt;/span&gt;
+      &lt;span&gt;「どうせ俺はモブキャラだし。」&lt;/span&gt;
     &lt;/div&gt;
   &lt;/div&gt;
 
@@ -1917,9 +1925,10 @@ window.Engine = SugarCube.Engine;</script><tw-passagedata pid="1" name="1" tags=
   &lt;div class=&quot;twee-char-mainrow&quot;&gt;
     &lt;img src=&quot;https://i.postimg.cc/j2c8v9s3/I-D-W-L.png&quot; class=&quot;twee-char-portrait&quot; alt=&quot;角色形象圖&quot;&gt;
     &lt;div class=&quot;twee-char-quotes&quot;&gt;
-      &lt;span&gt;「不聯絡不是沒想你，只是不敢打擾。」&lt;/span&gt;
-      &lt;span&gt;「存在感稀薄到自己都快忘了自己。」&lt;/span&gt;
-      &lt;span&gt;「安靜到讓人忘記我的存在。」&lt;/span&gt;
+      &lt;span&gt;「世界那麼大，我只想窩家裡。」&lt;/span&gt;
+      &lt;span&gt;「我不是沒朋友，只是朋友都活在我的幻想裡。」&lt;/span&gt;
+      &lt;span&gt;「Socializing is just pretending to be normal for a few hours.」&lt;/span&gt;
+      &lt;span&gt;「何をやってもうまくいかないのは仕様です。」&lt;/span&gt;
     &lt;/div&gt;
   &lt;/div&gt;
 
